チャット画面のフロント実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -12,7 +12,8 @@
     <div class="room-name">
       <a href="#">techroom1</a>
     </div>
-    <div class="room"></div>
+  </div>
+  <div class="room">
     <div class="room-name">
       <a href="#">techroom2</a>
     </div>
